polish docker-compose and remove pipfile

--- a/example.env
+++ b/example.env
@@ -1,5 +1,9 @@
 # rename to '.env'
 
 ENV_DRF_API_TEST_SECRET_KEY=django-insecure-hybs=%*%37iv!3is_7*0ub1$a0vb+o%pmhvu^=r+w7)88^^!vh
-ENV_DRF_API_TEST_ALLOWED_HOSTS=localhost,0.0.0.0,127.0.0.1,ai-api-backend.tstsrv.de
+ENV_DRF_API_TEST_ALLOWED_HOSTS=localhost,0.0.0.0,127.0.0.1
 ENV_DRF_API_TEST_DEBUG=True 
+
+ENV_DJANGO_SUPERUSER_PASSWORD=mypassword
+ENV_DJANGO_SUPERUSER_USERNAME=myuser
+ENV_DJANGO_SUPERUSER_EMAIL=myuser@domain.com
