--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.7.2
-Django==4.2.4
+Django==4.2.5
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
+djangorestframework-simplejwt==5.3.0
 PyJWT==2.8.0
-pytz==2023.3
+pytz==2023.3.post1
 sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
+whitenoise==6.5.0
+daphne==4.0.0
