--- a/example.env
+++ b/example.env
@@ -1,9 +1,10 @@
-# rename to '.env'
+# rename to '.env', change values as needed
 
-ENV_DRF_API_TEST_SECRET_KEY=django-insecure-hybs=%*%37iv!3is_7*0ub1$a0vb+o%pmhvu^=r+w7)88^^!vh
-ENV_DRF_API_TEST_ALLOWED_HOSTS=localhost,0.0.0.0,127.0.0.1
-ENV_DRF_API_TEST_DEBUG=True 
+ENV_DRFJWT_SECRET_KEY=django-insecure-hybs=%*%37iv!3is_7*0ub1$a0vb+o%pmhvu^=r+w7)88^^!vh
+ENV_DRFJWT_ALLOWED_HOSTS=localhost,0.0.0.0,127.0.0.1
+ENV_DRFJWT_DEBUG=True 
+ENV_DRFJWT_CSRF_TRUSTED_ORIGINS=http://localhost,http://127.0.0.1
 
-ENV_DJANGO_SUPERUSER_PASSWORD=mypassword
-ENV_DJANGO_SUPERUSER_USERNAME=myuser
-ENV_DJANGO_SUPERUSER_EMAIL=myuser@domain.com
+ENV_DRFJWT_DJANGO_SUPERUSER_PASSWORD=mypassword
+ENV_DRFJWT_DJANGO_SUPERUSER_USERNAME=myuser
+ENV_DRFJWT_DJANGO_SUPERUSER_EMAIL=myuser@domain.com
