add prod docker-compose

--- a/example.env
+++ b/example.env
@@ -4,6 +4,8 @@ ENV_DRFJWT_SECRET_KEY=django-insecure-hybs=%*%37iv!3is_7*0ub1$a0vb+o%pmhvu^=r+w7
 ENV_DRFJWT_ALLOWED_HOSTS=localhost,0.0.0.0,127.0.0.1
 ENV_DRFJWT_DEBUG=True 
 ENV_DRFJWT_CSRF_TRUSTED_ORIGINS=http://localhost,http://127.0.0.1
+ENV_DRFJWT_DOCKER_CERT_RESOLVER=foo
+ENV_DRFJWT_DOCKER_DOMAIN=foo
 
 ENV_DRFJWT_DJANGO_SUPERUSER_PASSWORD=mypassword
 ENV_DRFJWT_DJANGO_SUPERUSER_USERNAME=myuser
