--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ cryptography==41.0.3
 daphne==4.0.0
 Django==4.2.5
 django-cors-headers==4.2.0
+django-environ==0.11.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+Faker==19.6.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
@@ -18,6 +20,7 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 PyJWT==2.8.0
 pyOpenSSL==23.2.0
+python-dateutil==2.8.2
 pytz==2023.3.post1
 service-identity==23.1.0
 six==1.16.0
@@ -28,4 +31,3 @@ typing_extensions==4.7.1
 tzdata==2023.3
 whitenoise==6.5.0
 zope.interface==6.0
-django-environ==0.11.2
