--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,32 @@
-asgiref==3.7.2
-attrs==23.1.0
+asgiref==3.8.1
+attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
-cffi==1.15.1
-constantly==15.1.0
-cryptography==42.0.4
-daphne==4.0.0
-Django==4.2.11
-django-cors-headers==4.2.0
+cffi==1.16.0
+constantly==23.10.4
+daphne==4.1.2
+Django==5.0.6
+django-cors-headers==4.3.1
 django-environ==0.11.2
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
-Faker==19.6.0
+djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+Faker==25.6.0
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
+pyasn1==0.6.0
+pyasn1-modules==0.4.0
+pycparser==2.22
 PyJWT==2.8.0
-pyOpenSSL==23.2.0
-python-dateutil==2.8.2
-pytz==2023.3.post1
-service-identity==23.1.0
+pyOpenSSL==24.1.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+service-identity==24.1.0
 six==1.16.0
 sqlparse==0.5.0
-Twisted==23.10.0
+Twisted==24.3.0
 txaio==23.1.1
-typing_extensions==4.7.1
-tzdata==2023.3
-whitenoise==6.5.0
-zope.interface==6.0
+typing_extensions==4.12.1
+tzdata==2024.1
+whitenoise==6.6.0
+zope.interface==6.4.post2
